even the nested access should be more deterministic ^_^

--- a/templates/global_common.erb
+++ b/templates/global_common.erb
@@ -11,7 +11,7 @@ common {
 <%- common.sort.each do |key,value| -%>
 <%- if value.is_a?(Hash) -%>
 	<%= key %> {
-<%- value.each do |k,v| -%>
+<%- value.sort.each do |k,v| -%>
 		<%= k %>	<%= v %>;
 <%- end -%>
 	}
