add parameter for resource specific options

--- a/templates/resource.erb
+++ b/templates/resource.erb
@@ -3,13 +3,23 @@
 #
 
 resource <%= scope.lookupvar('title') %> {
-	device		<%= scope.lookupvar('dev') %>;
-	meta-disk	<%= scope.lookupvar('metadisk') %>;
+<%- options.sort.each do |key,value| -%>
+<%- if value.is_a?(Hash) -%>
+    <%= key %> {
+<%- value.sort.each do |k,v| -%>
+        <%= k %>    <%= v %>;
+<%- end -%>
+    }
+<%- end -%>
+<%- end -%>
+
+    device      <%= scope.lookupvar('dev') %>;
+    meta-disk   <%= scope.lookupvar('metadisk') %>;
 <%- scope.lookupvar('hosts').each_with_index do |element, index| -%>
 
-	on <%= scope.lookupvar('hosts')[index] %> {
-		address	<%= scope.lookupvar('ips')[index] %>:<%= scope.lookupvar('port') %>;
-		disk	<%= scope.lookupvar('disks')[index] %>;
-	}
+    on <%= scope.lookupvar('hosts')[index] %> {
+        address <%= scope.lookupvar('ips')[index] %>:<%= scope.lookupvar('port') %>;
+        disk    <%= scope.lookupvar('disks')[index] %>;
+    }
 <%- end -%>
 }
